[package]
name = "lox-linein-bridge"
version = "1.2.0"
edition = "2021"

[dependencies]
anyhow = "1.0"
alsa-sys = "0.3"
cpal = "0.15"
dialoguer = "0.11"
reqwest = { version = "0.12", default-features = false, features = ["json", "rustls-tls"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
time = { version = "0.3", features = ["formatting"] }
tokio = { version = "1.37", features = ["macros", "rt-multi-thread", "net", "time", "sync", "signal"] }
toml = "0.8"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["fmt", "env-filter"] }
url = "2.5"

[build-dependencies]
cc = "1.2"
pkg-config = "0.3"

[profile.release]
lto = "fat"
codegen-units = 1
panic = "abort"
opt-level = "z"
strip = "symbols"
