[package]
name = "lox-linein-bridge"
version = "1.6.2"
edition = "2021"

[dependencies]
anyhow = "1.0"
alsa-sys = "0.3"
cpal = "0.15"
futures-util = "0.3"
get_if_addrs = "0.5"
hostname = "0.4"
mac_address = "1.1"
mdns-sd = "0.11"
reqwest = { version = "0.12", default-features = false, features = ["json", "rustls-tls"] }
rubato = "0.15"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
time = { version = "0.3", features = ["formatting"] }
tokio = { version = "1.37", features = ["macros", "rt-multi-thread", "net", "time", "sync", "signal"] }
tokio-tungstenite = "0.23"
toml = "0.8"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["fmt", "env-filter"] }
url = "2.5"
uuid = { version = "1.8", features = ["v4"] }

[build-dependencies]
cc = "1.2"
pkg-config = "0.3"

[profile.release]
lto = "fat"
codegen-units = 1
panic = "abort"
opt-level = "z"
strip = "symbols"
